# Bot

./: .env.example  .gitignore  README.md  pyproject.toml
scanner/: __init__.py  accumulation.py  alerts.py  chart.py  config.py  indicators.py  main.py  metrics.py  ohlcv.py  scoring.py  state.py  universe.py
scanner/onchain/: helius.py
scanner/sources/: base.py  coingecko.py  dexscreener.py  geckoterminal.py
tests/: conftest.py  test_accumulation.py  test_alerts_format.py  test_chart.py  test_daemon_schedule.py  test_funnel.py  test_helius.py  test_holder_snapshots.py  test_indicators.py  test_sanity_guards.py  test_scoring.py  test_state.py  test_universe.py  test_wash_signal.py  test_wyckoff.py
